better style file & change to em & Chinese Lorem

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,138 +1,109 @@
 @import "reset.css";
 
+@link-color:    #999999;
+@header-color:  #333333;
+@text-color:    #555555;
+@background:    #fcfcfc;
+@emphasize:     #4e8ca6;
+
 @smallscreen:   960px;
-@mobilescreen:  480px;
+@mobilescreen:  600px;
 
 body {
-    @padding-header:    80px;
-    @padding-other:     50px;
+    @padding-right:     3.0em;
+    @padding-other:     2.0em;
+    @ls-mul:            2.0;
+    @ms-mul:            0.3;
     padding:
-        (@padding-other * 2) (@padding-header * 2)
-        (@padding-other * 2) (@padding-other * 2);
+        (@padding-other * @ls-mul) (@padding-right * @ls-mul)
+        (@padding-other * @ls-mul) (@padding-other * @ls-mul);
     @media screen and (max-width: @smallscreen) {
         padding:
-            @padding-other @padding-header
+            @padding-other @padding-right
             @padding-other @padding-other;
     }
     @media screen and (max-width: @mobilescreen) {
         padding:
-            (@padding-other / 2) (@padding-header / 2)
-            (@padding-other / 2) (@padding-other / 2);
+            (@padding-other * @ms-mul) (@padding-right * @ms-mul)
+            (@padding-other * @ms-mul) (@padding-other * @ms-mul);
     }
+
     max-width: 800px;
-    font: 17px "Lucida Grande", Helvetica, Arial,
+    color: @text-color;
+    background-color: @background;
+    font: 1.2em 
+        "Lucida Grande", Helvetica, Arial, "Droid Sans",
         "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 }
+
+@base-margin:   0.7em;
+@h2-mul:        0.75;
+@h3-mul:        0.5;
 h1 {
-    margin: 20px 0 20px 0;
-    font-size: 2em;
+    margin: @base-margin 0 @base-margin 0;
+    font-size: 2.5em;
 }
 h2 {
-    margin: 15px 0 15px 0;
+    margin: (@base-margin * @h2-mul) 0 (@base-margin * @h2-mul) 0;
     font-size: 1.5em;
 }
 h3 {
-    padding-top: 10px;
+    margin: (@base-margin * @h3-mul) 0 (@base-margin * @h3-mul) 0;
     font-size: 1.17em;
 }
+
 a {
-    color: #777;
+    color: @link-color;
     text-decoration: none;
 }
-p,
-pre {
-    margin: 17px 0 17px 0;
+
+h1, h2, h3 {
+    color: @header-color;
 }
-strong,
-em {
-    color: #4e8ca6;
+
+p, pre {
+    margin: 1em 0 1em 0;
 }
-table {
-    min-width: 500px;
-    margin-top: 20px;
+
+strong, em {
+    color: @emphasize;
 }
-td,
-#limit_box {
-    background-color: #f7f7f7;
-    padding: 10px;
-}
-#limit_box {
-    font-size: 0.7em;
-    color: #777;
-}
-input,
-textarea {
+
+input, textarea {
     background-color: #f7f7f7;
     border: 0;
+    width: 210px;
     padding: 10px;
+    margin: 2px 0 2px 0;
     font-size: 1em;
 }
+
 textarea {
     width: 80%;
     max-width: 100%;
     height: 350px;
 }
+
 select {
     background: #fff;
     margin-top: 20px;
     padding: 15px;
     border: 0;
 }
-#username,
-#password {
-    width: 210px;
-}
-#signin_username,
-#signin_password {
-    margin: 2px 0 2px 0;
-}
-#submit,
-#button {
-    color: #fff;
-    background-color: #777;
-    margin-top: 20px;
-    padding: 10px;
-}
-.marginer_up {
-    margin-top: 40px;
-}
-.message {
-    color: #fff;
-    background-color: #4e8ca6;
-    padding: 10px;
-    margin: 20px 0 20px 0;
-}
-#redirect {
-    display: none;
-}
+
 #nav {
-    font-size: 0.6em;
+    font-size: 0.9em;
 }
 .nav_item {
     text-transform: uppercase;
     display: inline;
-    margin: 0 10px 0 0;
+    margin: 0 0.8em 0 0;
 }
+
 #content {
-    margin: 40px 0 40px 0;
+    padding: 2em 0 2em 0;
 }
-.problist_headinfo {
-    color: #fff;
-    background-color: #777;
-    text-transform: uppercase;
-}
-.problist_id {
-    width: 20%;
-}
-.problist_info {
-    width: 80%;
-}
-#lrnav_bar {
-    margin: 10px 0 0 0;
-}
-.lrnav {
-    margin: 0 20px 0 0;
-}
+
 #footer {
-    font-size: 8pt;
+    font-size: 0.7em;
 }
