--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -1,23 +1,27 @@
 extends style
 
 append content
-  p
-    |Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam feugiat felis at velit luctus ut adipiscing nibh consectetur. Phasellus suscipit, tortor a imperdiet viverra, mi purus lobortis nibh, eu sodales neque dolor at felis. Duis sed est sapien. Nunc sit amet ultrices nulla. Pellentesque scelerisque, ante at vehicula viverra, neque tortor convallis velit, non auctor lacus lacus sed nisi. Vestibulum euismod, magna sagittis egestas lacinia, turpis mauris bibendum arcu, in sagittis nibh nulla at mauris. Nulla facilisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. In sed malesuada magna. Duis sodales auctor convallis. Maecenas enim orci, sollicitudin id venenatis bibendum, pulvinar ut elit. Sed dignissim eros vitae ante tempus fermentum. Suspendisse nunc quam, varius sit amet luctus sed, scelerisque nec nibh. Cras ac ullamcorper libero.
-  p
-    |Quisque faucibus enim at quam semper commodo. Nulla facilisi. Vestibulum adipiscing molestie velit a facilisis. Proin porttitor massa sit amet quam fermentum in vehicula augue aliquam. Aliquam pulvinar est vel nibh viverra pulvinar. In hac habitasse platea dictumst. Quisque laoreet nulla vel arcu ultricies sodales. Sed scelerisque, orci eu placerat interdum, est felis fringilla odio, at porttitor diam nulla quis eros. Integer non urna justo, sed imperdiet quam. Pellentesque sagittis neque et urna auctor rutrum. Quisque condimentum, mi non gravida lacinia, mi felis vestibulum erat, a laoreet dolor ipsum in tellus. Etiam id eros tortor, ut congue ipsum. Donec semper viverra tellus nec ultrices.
-  p
-    |Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras nec odio ac leo ultrices accumsan. Integer eget mi magna. Cras bibendum, mi a vehicula dictum, purus nisl eleifend purus, id egestas quam diam eu odio. Aenean convallis est elit. Duis ut turpis id tortor condimentum bibendum vitae mollis tellus. Suspendisse a justo eget quam lacinia tincidunt. Curabitur dapibus porta justo eget rhoncus. Nunc elit leo, scelerisque at suscipit euismod, interdum vel ligula. Vivamus tristique rutrum risus, sed hendrerit ante mollis nec. Etiam ornare mattis velit vitae pellentesque.
-  p
-    |Donec quis pharetra lacus. Vivamus accumsan adipiscing enim a ornare. Nam auctor ante diam. In hac habitasse platea dictumst. Nunc rutrum volutpat augue in egestas. Nullam quam diam, cursus a ullamcorper non, porta eget tellus. Donec rutrum, nunc id placerat posuere, dui enim egestas lectus, quis tincidunt lectus metus a sapien. Quisque vehicula, tellus porttitor iaculis dictum, sem nisi euismod purus, non dignissim mauris lacus condimentum est. Duis sit amet ipsum feugiat lectus dignissim pharetra. Proin sapien magna, mollis eget sodales in, convallis eu libero. Integer eleifend porttitor eleifend.
-  p
-    |Maecenas non enim in orci aliquet volutpat. Etiam accumsan nibh libero. Vivamus erat erat, cursus non aliquam et, aliquet et eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam fermentum molestie quam in ullamcorper. Integer tellus tortor, rhoncus blandit mattis at, vestibulum ut ante. Sed a augue eget orci malesuada eleifend ut eu sem.
-  p
-    |Nulla imperdiet lorem scelerisque urna feugiat eget hendrerit turpis interdum. Vestibulum neque felis, pulvinar gravida lobortis quis, facilisis non magna. Nullam elit leo, sodales eu volutpat sed, ornare et est. Integer convallis porta erat, at sagittis risus adipiscing sit amet. Etiam vehicula malesuada odio quis lacinia. Vestibulum vitae orci vitae nunc faucibus tincidunt. Suspendisse dapibus nunc in orci condimentum ut lobortis purus iaculis. Sed placerat quam in ligula ullamcorper id fermentum lectus semper. Morbi nec lorem erat. Curabitur sed risus lectus. Donec id diam vel ligula luctus congue a sed tellus.
-  p
-    |Donec sodales consectetur leo sit amet imperdiet. Mauris a orci ut magna semper sollicitudin. Vestibulum nec nibh lorem, a dignissim diam. Ut ornare nibh ac est fringilla lobortis. Morbi ac erat sed ante rhoncus condimentum id nec velit. Mauris et fringilla urna. Cras in diam in quam consequat pretium sit amet vitae lorem. Praesent a lacus arcu, non ullamcorper quam. Etiam quis augue non arcu dignissim convallis sed et magna. Vestibulum luctus, mi vitae blandit dictum, nunc elit gravida velit, sit amet pellentesque nisi magna at leo.
-  p
-    |Mauris ligula eros, consectetur id faucibus vel, volutpat tincidunt arcu. Suspendisse vel velit leo, eget ultrices velit. Praesent interdum magna eu nulla faucibus sollicitudin. Maecenas sodales ante ac mauris blandit sed volutpat dui posuere. Vivamus facilisis gravida quam, id fermentum arcu interdum scelerisque. Integer laoreet dolor id libero sodales ac euismod risus sagittis. Cras in imperdiet quam. Curabitur convallis congue turpis quis venenatis. Phasellus pellentesque congue felis vitae vehicula. Vestibulum vitae velit vitae nulla ornare suscipit ut iaculis turpis. Nam sit amet sapien hendrerit lacus aliquam fermentum. Maecenas hendrerit nisi ut risus euismod ultricies.
-  p
-    |Proin quis nunc sit amet ante molestie consequat. In in velit in diam rutrum viverra. Maecenas eleifend mauris nec lectus sollicitudin eget hendrerit mauris adipiscing. Sed lorem ligula, tincidunt sit amet blandit id, convallis vel est. Etiam nec turpis lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque sit amet lacinia dolor. Nulla gravida, enim vel sodales mollis, nisl turpis cursus ante, bibendum accumsan dui leo et enim. Nunc cursus feugiat velit eu adipiscing.
-  p
-    |Fusce elit ligula, aliquam vitae ultrices et, hendrerit quis nulla. Nunc at fermentum risus. Pellentesque tincidunt, mi id scelerisque facilisis, velit augue tincidunt nisl, in dictum lorem sem placerat nunc. Etiam faucibus mi id purus fermentum consequat tristique iaculis lorem. Aliquam tincidunt tincidunt scelerisque. Mauris ut tellus nec massa euismod porta vitae vitae diam. Donec sodales lorem eget eros dapibus in condimentum nisi luctus. Curabitur nisl sapien, tincidunt et viverra eu, ornare ac justo. Fusce posuere, eros vel fringilla commodo, nibh tortor laoreet dolor, ut eleifend eros orci hendrerit lorem. Aenean sit amet nibh mauris, at consequat ante. Vestibulum non dictum magna.
+    p
+        |（以下为亂數假文）今站別，是為夫有十這種中此光布代印有，到北目有門子家不希：式自玩邊管題從量生失？可他嚴招不卻我起大假覺愛多英素，自權入沒一物的不：山面以行到適的她水國主時，石自。
+    p
+        |花很我放，導河故因的而。相品站聲光人時：詩決色任你，內性道來起過率持後說樣年……好來兒解技始建。車難家看樣像身於的過識我教決、預年出。營府要工傳，改意車用，相了正親經未大月難：難她行門界代怕治財驗率。腳友不一子得頭和費黃康室緊事一生大來大講，語容父過成預安力人到一了，還並己可當，不名的密？動自物那越年行；不資坡前性影社庭，是少道明布沒說成白資品時個中質經個成整加體解裡節：友銷西兒道機候們華天化自量事我、財美兩不不當排去式……是寶趣哥題、加外另。
+    p
+        |團強不下；需合持。家以北長也出良一是有，升器靜表度先四食好：半都見。過事輪記生親那全單果不！正入能：陽黑我所了相院爭，隨受在器？初背那立何沒你治戰推來市年特職樂子現便、師海集民來多況達你月沒多、到情健立第從愛示直作文？那天之？電不爸來可大化地它樣裡得都物發化的手未寶？關那畫回出條起在收半像她！上道法人終家角細藝了放論不國想景源看住復能……部一自華色聲園著些八司育實戰在操……間聞我交色裡電活山法……把國一可少，的外工馬製，天的點找個金圖寫基分國感再面電仍書水年合，相沒費福英配歌經？
+    p
+        |名家他支年場增我送？她故如非外離靈化要連考落酒面中感學前、清發著散兒說著外地雲斷此下般先個門差道引子個千！廣的大，所歡取一作發事家可老特了現。陽飯大法人國的。書人條交場這。為必園件親同一、生專於媽的易比比往師使？股同人少方；體定心學參這；型利們實。面光里成變筆早樂的如選：己覺數！火事只法如生到富我靈爾光東玩好多制小汽不：是一日何會不新制富半當天今活後；辦相是月電大道：體選下它立離是人成；落出人保人受境他發當少優眼親經？臉先。
+    p
+        |黃民體跑正工馬子亞學學源。
+    p
+        |變為起，團廣長期是金，所出然以，樂大小我時存就可口歌持差。
+    p
+        |出它地會果助爸的是包……小是事己今絕難認親感各加學問研子中課然壓大於！兒到場，是上口起人旅當漸業……歷望低年省在們工家可香的西布應快了，一死課流特得紅……麼氣利模經裡今最只才反著北東起性能手著想地德年著此。
+    p
+        |意時路學有正業：了有最。
+    p
+        |子從雄水比後動，雜往上減活會活平評參她地得皮提生點眼寶消汽分是成麼重那南，專面打不驚雖銷壓體樂謝受；家高交總教安有老初往。看手然也。
+    p
+        |和每作禮政靜員和：商人作顯個直產小定一資工車大。安院裡有我。學小有，到不市而資手緊用觀。確動的組想半一，治細及了！業包好電常、定減花營，之王人。上小每他進保裡卻公年。生書之斷我，電大品品沒道區發好考歷是些再為音無西，來如滿成讓直今往小文人沒在、花長年何，說物灣，麼表者本進動出舞的！
+    p
+        |是年大計灣才年班，在的時視，機達定兩。
+    p
+        |法跟值地小時生斯可無點心是：機便紀政，正相縣……著果王得明經不金太照成山力子書：企什大告意。公於金強不著：教寫古羅則要：舉我經用形示部久基愛幾向。他政身樓持終縣雄部公後未。
