fix mobile scale

--- a/views/style.jade
+++ b/views/style.jade
@@ -5,7 +5,7 @@ block body
   div#header
     block header
       h1#logo
-        a(href="/")= website
+        a(href="/") 泉州一中<br/>志愿者协会
       #nav_bar
         ul#nav
           li.nav_item
