--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,5 +1,6 @@
 doctype 5
 meta(charset="utf-8")
+meta(name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no")
 html(lang='zh-CN')
   head
     block head
