signin & signout & message flash

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -107,6 +107,24 @@ select {
     }
 }
 
+.button {
+    color: white;
+    background-color: #777;
+    margin-top: 1.5em;
+    padding: 0.6em;
+}
+
+label {
+    padding: 0 0.5em 0 0;
+}
+
+.message {
+    color: white;
+    background-color: #4e8ca6;
+    padding: 0.8em;
+    margin-top: 1em;
+}
+
 #footer {
     font-size: 0.7em;
 }
