--- a/views/signin.jade
+++ b/views/signin.jade
@@ -1,7 +1,7 @@
 extends style
 
 block content
-    h2 加入志愿者
+    h2 登录
     form(action="#",method="post")
         div
             label 手机
@@ -12,4 +12,4 @@ block content
             input(type="password", name="password")
 
         div
-            input.button(type="submit", value="加入")
+            input.button(type="submit", value="登录")
