better password security with js md5

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,5 +9,6 @@ html(lang='zh-CN')
       else  
         title= website
       link(rel='stylesheet', href='/stylesheets/style.css')
+      script(src='/javascripts/jquery.min.js')
   body
     block body
