--- a/views/signin.jade
+++ b/views/signin.jade
@@ -1,15 +1,18 @@
 extends style
 
+block append head
+    script(src='/javascripts/psafe.js')
+
 block content
     h2 登录
-    form(action="#",method="post")
+    form#form(action="#",method="post")
         div
             label 手机
-            input(type="text", name="username")
+            input#username(type="text", name="username")
 
         div
             label 密码
-            input(type="password", name="password")
+            input#password(type="password", name="password")
 
         div
             input.button(type="submit", value="登录")
