--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -117,6 +117,10 @@ label {
     margin-top: 1em;
 }
 
+.autoimg {
+    max-width: 100%;
+}
+
 .note, #footer {
     font-size: 0.6em;
     padding: 0.5em 0 0.5em 0;
