--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -79,6 +79,12 @@ input, textarea, select {
     -webkit-appearance: none;
 }
 
+textarea {
+    width: 80%;
+    height: 20em;
+    margin-top: 1em;
+}
+
 select {
     width: (12em + 0.6em * 2);
 }
@@ -103,6 +109,7 @@ select {
     color: white;
     background-color: #777;
     margin-top: 1.5em;
+    margin-right: 0.5em;
     padding: 0.6em;
 }
 
@@ -124,4 +131,25 @@ label {
 .note, #footer {
     font-size: 0.6em;
     padding: 0.5em 0 0.5em 0;
+}
+
+table {
+    min-width: 85%;
+    margin-top: 1em;
+}
+
+td {
+    background: #f7f7f7;
+    padding: 0.9em;
+}
+
+.head_info {
+    color: white;
+    background-color: #777;
+    text-transform: uppercase;
+}
+
+#lrnav_bar {
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
