--- a/views/newsedit.jade
+++ b/views/newsedit.jade
@@ -1,27 +1,27 @@
 extends style
 
 block content
-    h2 管理新闻
+    h2= title 
     form#form(action="#",method="post")
         div
             label 标题
-            input#title(type="text", value="#{title || ''}", name="title")
+            input#title(type="text", value="#{form.title || ''}", name="title")
 
         div
             label 时间
             input#create(type="text",
-                value="#{create || Date(Date.now())}",
+                value="#{form.create || Date(Date.now())}",
                 name="create")
         
         div
             label 作者
-            input#author(type="text", value="#{author || user.fullname}", name="author")
+            input#author(type="text", value="#{form.author || user.fullname}", name="author")
 
         div
             textarea#contentbox(name="content")
-                | #{content || ''}
+                | #{form.content || ''}
             .note （支持 Markdown 语法）
 
         div
-            input.button(type="submit", value="添加/修改")
+            input.button(type="submit", value="#{title}")
 
