--- a/views/signin.jade
+++ b/views/signin.jade
@@ -1,7 +1,7 @@
 extends style
 
 block content
-    h2 登录
+    h2= title
     form#form(action="#",method="post")
         div
             label 手机
