--- a/views/newsedit.jade
+++ b/views/newsedit.jade
@@ -5,7 +5,7 @@ block content
     form#form(action="#",method="post")
         div
             label 标题
-            input#title(type="text", value="#{form.title || ''}", name="title")
+            input#title(type="text", value="#{form.title || '无标题'}", name="title")
 
         div
             label 时间
