--- a/views/newslist.jade
+++ b/views/newslist.jade
@@ -5,7 +5,7 @@ append content
 	table.list
 		tr.list_head
 			td.head_info 标题
-			td.head_info 时间
+			td.head_info 日期
 		for news in newslist
 			tr.list_item
 				td.list_info
